--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -7,7 +7,7 @@
     height: 100%;
 }
 
-/* Optional: Makes the sample page fill the window. */
+/* Optional: Makes the Google Map page fill the window. */
 html,
 body {
     height: 100%;
@@ -253,7 +253,7 @@ a {
 
 /* === Fixed Footer with Scrollable Body === */
 
-/* --- Fixed Footer with [display: grid] and [grid-template-columns: 1fr 1fr 1fr] to set Footer Elements in a row.  --- */
+/* --- Fixed Footer with [display: grid] and [grid-are: foot*] to set Footer Elements in a row.  --- */
 
 .footer {
     margin: 0;
@@ -316,6 +316,24 @@ i[tool-tip]:hover::after {
     bottom: 200%;
 }
 
+/* === BACKDROP === */
+
+#backdrop {
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.50);
+    z-index: 2;
+    pointer-events: none;
+    display: none;
+}
+
+#backdrop.visible {
+    display: block;
+    pointer-events: all;
+}
 
 /* === MODAL === */
 /*  */
@@ -325,6 +343,7 @@ Section Styling
 '.section a', '.container', 'fixed-footer', and 'footer...' to create a consistent contact experience, and look-and-feel throughout the website.
 Create a clean look, that's easy to comprehend and use.
 === */
+/* 
 .modal {
     position: fixed;
     z-index: 100;
@@ -356,4 +375,49 @@ Create a clean look, that's easy to comprehend and use.
     padding: 1rem;
     display: flex;
     justify-content: flex-end;
+}
+*/
+
+.card {
+    background: white;
+    border-radius: 10px;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
+}
+
+.modal {
+    position: fixed;
+    z-index: 100;
+    width: 80%;
+    top: 30vh;
+    left: 10%;
+    display: none;
+}
+
+.modal.visible {
+    display: block;
+    animation: fade-slide-in 0.3s ease-out forwards;
+}
+
+.modal .modal__title {
+    margin: 0;
+    padding: 1rem;
+    border-bottom: 1px solid #00329e;
+    background: #00329e;
+    color: white;
+    border-radius: 10px 10px 0 0;
+}
+
+.modal .modal__content {
+    padding: 1rem;
+}
+
+.modal .modal__actions {
+    padding: 1rem;
+    display: flex;
+    justify-content: flex-end;
+}
+
+#add-modal .modal__content {
+    display: flex;
+    flex-direction: column;
 }
