--- a/test/gStyle.css
+++ b/test/gStyle.css
@@ -229,7 +229,7 @@ JS: Control Marker Tool-Tips, and Modals.
         "map map map"
         "map map map"
         "map map map"
-        "footLeft footMid footRight";
+        "footer  footer footer";
     /* Crazy, I know...though it makes perfect sense...and is visually appealing, and is easier to understand */
 }
 
@@ -240,32 +240,19 @@ JS: Control Marker Tool-Tips, and Modals.
     width: auto;
 }
 
-.footLeft,
-.footMid,
-.footRight {
-    /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
-    display: grid;
+.footer {
+    display: inline-block;
+    grid-area: footer;
     padding: 10px 0;
     position: relative;
     bottom: 0;
-    /* background: rgb(13, 110, 139); */
+    margin: 0;
+    text-align: center;
     background: var(--background-color);
     color: var(--main-font-color);
-    -webkit-box-shadow: 0px -6px 0px 0px rgba(0, 0, 0, 0.05);
-    -moz-box-shadow: 0px -6px 0px 0px rgba(0, 0, 0, 0.05);
-    box-shadow: 0px -6px 0px 0px rgba(0, 0, 0, 0.05);
-}
-
-.footLeft {
-    grid-area: footLeft;
-}
-
-.footMid {
-    grid-area: footMid;
-}
-
-.footRight {
-    grid-area: footRight;
+    -webkit-box-shadow: 0px -6px 20px 0px rgba(0, 0, 0, 0.19);
+    -moz-box-shadow: 0px -6px 20px 0px rgba(0, 0, 0, 0.19);
+    box-shadow: 0px -6px 20px 0px rgba(0, 0, 0, 0.19);
 }
 
 /* === FOOTER === */
@@ -277,21 +264,7 @@ Section Styling
 Create a clean look, that's easy to comprehend and use.
 === */
 
-/* ---  Making the Navigation Links visible against the #999999 (grey) background of the Fixed Navigation --- */
-a {
-    color: var(--main-font-color);
-    text-decoration: none;
-    /* Remove underline from links = HTML style="text-decoration:none" */
-}
-
 /* === Fixed Footer with Scrollable Body === */
-
-/* --- Fixed Footer with [display: grid] and [grid-are: foot*] to set Footer Elements in a row.  --- */
-
-.footer {
-    margin: 0;
-    text-align: center;
-}
 
 /* ---  Making the Navigation Links visible against the #999999 (grey) background of the Fixed Navigation --- */
 a {
@@ -309,12 +282,10 @@ a i:hover {
     /* transform: scale() works on all browsers. zoom: doesn't work on Firefox. Also, zoom: ruins the footer. */
 }
 
-/* --- Add padding to the Fontawesome icons for the Left and Right Footer elements. It keeps the icon layout consisten across smaller devices. --- */
-.fa-calendar,
-.fa-graduation-cap,
-.fa-location-arrow {
-    padding-right: 20px;
-    padding-left: 20px;
+.modal a {
+    color: rgb(0, 0, 0);
+    /* Make sure the links are visible against the white modal background */
+    font-size: 100%;
 }
 
 /* === WHY?
@@ -336,7 +307,7 @@ i[tool-tip]::after {
     color: var(--main-font-color);
     font-size: 0.75em;
     bottom: 0;
-    left: -10px;
+    left: -45px;
     /* Works on all tested displays (Chrome --> Inspect and FireFox RDM) and devices. The Tool-Tips are fully visible. */
     white-space: normal;
     transform: scale(0);
@@ -358,7 +329,7 @@ i[tool-tip]:hover::after {
     height: 100vh;
     top: 0;
     left: 0;
-    background: rgba(0, 0, 0, 0.50);
+    background: rgba(0, 0, 0, 0.20);
     z-index: 2;
     pointer-events: none;
     display: none;
@@ -382,6 +353,7 @@ Create a clean look, that's easy to comprehend and use.
     background: var(--main-font-color);
     border-radius: 10px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .modal {
@@ -411,6 +383,7 @@ Create a clean look, that's easy to comprehend and use.
 .modal .modal__content {
     padding: 1rem;
     font-family: inherit;
+    border-radius: 10px 10px 0 0;
 }
 
 .modal .modal__actions {
@@ -442,11 +415,6 @@ Added 'outline: none' to remove ugly click outline.
 */
 .button {
     background: #3D94F6;
-    background-image: -webkit-linear-gradient(top, #3D94F6, #1E62D0);
-    background-image: -moz-linear-gradient(top, #3D94F6, #1E62D0);
-    background-image: -ms-linear-gradient(top, #3D94F6, #1E62D0);
-    background-image: -o-linear-gradient(top, #3D94F6, #1E62D0);
-    background-image: linear-gradient(to bottom, #3D94F6, #1E62D0);
     -webkit-border-radius: 20px;
     -moz-border-radius: 20px;
     border-radius: 20px;
@@ -464,13 +432,7 @@ Added 'outline: none' to remove ugly click outline.
 }
 
 .button:hover {
-    border: solid #337FED 1px;
     background: #1E62D0;
-    background-image: -webkit-linear-gradient(top, #1E62D0, #3D94F6);
-    background-image: -moz-linear-gradient(top, #1E62D0, #3D94F6);
-    background-image: -ms-linear-gradient(top, #1E62D0, #3D94F6);
-    background-image: -o-linear-gradient(top, #1E62D0, #3D94F6);
-    background-image: linear-gradient(to bottom, #1E62D0, #3D94F6);
     -webkit-border-radius: 20px;
     -moz-border-radius: 20px;
     border-radius: 20px;
