--- a/test/gStyle.css
+++ b/test/gStyle.css
@@ -364,7 +364,7 @@ Create a clean look, that's easy to comprehend and use.
     position: fixed;
     z-index: 100;
     width: 80%;
-    top: 30vh;
+    top: 20vh;
     left: 10%;
     display: none;
     font-family: Raleway, sans-serif;
@@ -451,12 +451,38 @@ Added 'outline: none' to remove ugly click outline.
 input[type=text],
 textarea {
     width: 100%;
-    padding: 2px 20px;
+    padding: 4px 20px;
     /* padding: 12px 20px; */
-    margin: 2px 0;
+    margin: 4px 0;
     /* margin: 8px 0; */
     display: inline-block;
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
+}
+
+/* === Responsive Web Design - Mobile Devices First and Foremost === */
+/* --- Make sure that the JS Modal doesn't "hog the limelight, too much..." on displays with plenty of "Real Estate". --- */
+@media screen and (min-width: 600px) and (min-height: 600px) {
+    .modal {
+        width: 60%;
+        left: 20%;
+        top: 30vh;
+    }
+
+    .footer {
+        padding: 10px 0;
+        bottom: 0;
+        margin: 0;
+    }
+
+    a {
+        padding: 0px 50px;
+    }
+
+    input[type=text],
+    textarea {
+        padding: 12px 20px;
+        margin: 8px 0;
+    }
 }
