--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -11,8 +11,10 @@
 :root {
     --primary-color: rgba(13, 110, 139, 0.75);
     --overlay-color: rgba(13, 110, 139, 0.75);
+    --background-color: rgb(61, 148, 246);
+    /* rgb(13, 110, 139) rgb(76, 96, 155) rgb(170, 218, 255) rgb(61, 148, 246) */
     /* Same color used throughout, except for modal background. */
-    --main-font-color: #ffffff;
+    --main-font-color: rgb(255, 255, 255);
     --menu-speed: 0.75s;
 }
 
@@ -51,9 +53,9 @@ JS: Create and call custom functions, ZoomControl, MapType Control, and FullScre
 */
 
 .gm-style .controls {
-    font-size: 28px;
+    font-size: 36px;
     /* this adjusts the size of all the controls */
-    background-color: rgb(13, 110, 139);
+    background-color: var(--background-color);
     /* Border around the navigation controls */
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     box-sizing: border-box;
@@ -70,17 +72,22 @@ JS: Create and call custom functions, ZoomControl, MapType Control, and FullScre
 
 .gm-style .controls button {
     border: 0;
-    background-color: rgb(13, 110, 139);
+    background-color: var(--background-color);
     /* Background of the navigation controls */
-    color: #ffffff;
+    color: var(--main-font-color);
     /* Navigation control colour */
     font-family: 'Raleway', sans-serif;
     /* Consistent Font use on the website - Google: Map and Satellite naviagation elements */
 }
 
 .gm-style .controls button:hover {
-    color: #ffffff;
+    color: var(--main-font-color);
     transform: scale(1.5);
+}
+
+/* Added 'outline: none' to remove ugly click outline.  */
+.gm-style .controls button:focus {
+    outline: none;
 }
 
 .gm-style .controls.zoom-control {
@@ -178,6 +185,7 @@ JS: Create and call custom functions, ZoomControl, MapType Control, and FullScre
 .controls,
 p {
     font-family: 'Raleway', sans-serif;
+    margin-bottom: 10px;
     /* Consistent Font use on the website - Google Map, Tool-Tips, Controls and Text */
 }
 
@@ -221,7 +229,7 @@ JS: Control Marker Tool-Tips, and Modals.
         "map map map"
         "map map map"
         "map map map"
-        "footLeft footMid footRight";
+        "footer  footer footer";
     /* Crazy, I know...though it makes perfect sense...and is visually appealing, and is easier to understand */
 }
 
@@ -232,30 +240,20 @@ JS: Control Marker Tool-Tips, and Modals.
     width: auto;
 }
 
-.footLeft,
-.footMid,
-.footRight {
-    /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
-    display: grid;
+.footer {
+    display: inline-block;
+    grid-area: footer;
     padding: 10px 0;
     position: relative;
     bottom: 0;
-    background: rgb(13, 110, 139);
-    color: #ffffff;
+    margin: 0;
+    text-align: center;
+    background: var(--background-color);
+    color: var(--main-font-color);
+    -webkit-box-shadow: 0px -6px 20px 0px rgba(0, 0, 0, 0.19);
+    -moz-box-shadow: 0px -6px 20px 0px rgba(0, 0, 0, 0.19);
+    box-shadow: 0px -6px 20px 0px rgba(0, 0, 0, 0.19);
 }
-
-.footLeft {
-    grid-area: footLeft;
-}
-
-.footMid {
-    grid-area: footMid;
-}
-
-.footRight {
-    grid-area: footRight;
-}
-
 
 /* === FOOTER === */
 /* Fixed Footer Element: */
@@ -266,25 +264,11 @@ Section Styling
 Create a clean look, that's easy to comprehend and use.
 === */
 
-/* ---  Making the Navigation Links visible against the #999999 (grey) background of the Fixed Navigation --- */
-a {
-    color: #ffffff;
-    text-decoration: none;
-    /* Remove underline from links = HTML style="text-decoration:none" */
-}
-
 /* === Fixed Footer with Scrollable Body === */
 
-/* --- Fixed Footer with [display: grid] and [grid-are: foot*] to set Footer Elements in a row.  --- */
-
-.footer {
-    margin: 0;
-    text-align: center;
-}
-
 /* ---  Making the Navigation Links visible against the #999999 (grey) background of the Fixed Navigation --- */
 a {
-    color: #ffffff;
+    color: var(--main-font-color);
     font-size: 110%;
     padding: 0px 10px;
     text-decoration: none;
@@ -298,12 +282,14 @@ a i:hover {
     /* transform: scale() works on all browsers. zoom: doesn't work on Firefox. Also, zoom: ruins the footer. */
 }
 
-/* --- Add padding to the Fontawesome icons for the Left and Right Footer elements. It keeps the icon layout consisten across smaller devices. --- */
-.fa-calendar,
-.fa-graduation-cap,
-.fa-location-arrow {
-    padding-right: 20px;
-    padding-left: 20px;
+.modal a {
+    color: rgb(0, 0, 0);
+    /* Make sure the links are visible against the white modal background */
+    font-size: 100%;
+}
+
+.modal #fa-code {
+    color: rgb(255, 0, 0);
 }
 
 /* === WHY?
@@ -319,12 +305,13 @@ i[tool-tip]::after {
     content: attr(tool-tip);
     display: block;
     position: absolute;
-    background-color: rgb(13, 110, 139);
+    /* background-color: rgb(13, 110, 139); */
+    background-color: var(--background-color);
     padding: 1em 2em;
-    color: white;
+    color: var(--main-font-color);
     font-size: 0.75em;
     bottom: 0;
-    left: -10px;
+    left: -45px;
     /* Works on all tested displays (Chrome --> Inspect and FireFox RDM) and devices. The Tool-Tips are fully visible. */
     white-space: normal;
     transform: scale(0);
@@ -346,7 +333,7 @@ i[tool-tip]:hover::after {
     height: 100vh;
     top: 0;
     left: 0;
-    background: rgba(0, 0, 0, 0.50);
+    background: rgba(0, 0, 0, 0.20);
     z-index: 2;
     pointer-events: none;
     display: none;
@@ -365,54 +352,22 @@ Section Styling
 '.section a', '.container', 'fixed-footer', and 'footer...' to create a consistent contact experience, and look-and-feel throughout the website.
 Create a clean look, that's easy to comprehend and use.
 === */
-/* 
-.modal {
-    position: fixed;
-    z-index: 100;
-    width: 80%;
-    top: 30vh;
-    left: 10%;
-    display: none;
-}
-
-.modal.visible {
-    display: block;
-    animation: fade-slide-in 0.3s ease-out forwards;
-}
-
-.modal .modal__title {
-    margin: 0;
-    padding: 1rem;
-    border-bottom: 1px solid #00329e;
-    background: #00329e;
-    color: white;
-    border-radius: 10px 10px 0 0;
-}
-
-.modal .modal__content {
-    padding: 1rem;
-}
-
-.modal .modal__actions {
-    padding: 1rem;
-    display: flex;
-    justify-content: flex-end;
-}
-*/
 
 .card {
-    background: white;
+    background: var(--main-font-color);
     border-radius: 10px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .modal {
     position: fixed;
     z-index: 100;
     width: 80%;
-    top: 30vh;
+    top: 20vh;
     left: 10%;
     display: none;
+    font-family: Raleway, sans-serif;
 }
 
 .modal.visible {
@@ -425,12 +380,14 @@ Create a clean look, that's easy to comprehend and use.
     padding: 1rem;
     border-bottom: 1px solid #00329e;
     background: #00329e;
-    color: white;
+    color: var(--main-font-color);
     border-radius: 10px 10px 0 0;
 }
 
 .modal .modal__content {
     padding: 1rem;
+    font-family: inherit;
+    border-radius: 10px 10px 0 0;
 }
 
 .modal .modal__actions {
@@ -442,4 +399,90 @@ Create a clean look, that's easy to comprehend and use.
 #add-modal .modal__content {
     display: flex;
     flex-direction: column;
+}
+
+hr {
+    width: 80%;
+    height: 2px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #666;
+    border: 0 none;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+
+/* === BUTTONS ===
+Using CSS Button Creator: https://cssbuttoncreator.com/ and some additional modification to get it "just right".
+Added 'outline: none' to remove ugly click outline.
+*/
+.button {
+    background: #3D94F6;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    border-radius: 20px;
+    color: #FFFFFF;
+    font-family: Raleway, sans-serif;
+    font-size: 12px;
+    font-weight: 100;
+    padding: 3px 10px;
+    text-shadow: 1px 1px 20px #000000;
+    text-decoration: none;
+    display: inline-block;
+    cursor: pointer;
+    text-align: center;
+    margin-right: 10px;
+}
+
+.button:hover {
+    background: #1E62D0;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    border-radius: 20px;
+    text-decoration: none;
+}
+
+.button:focus {
+    outline: none;
+}
+
+/*  === FORM === */
+input[type=text],
+textarea {
+    width: 100%;
+    padding: 4px 20px;
+    /* padding: 12px 20px; */
+    margin: 4px 0;
+    /* margin: 8px 0; */
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+/* === Responsive Web Design - Mobile Devices First and Foremost === */
+/* --- Make sure that the JS Modal doesn't "hog the limelight, too much..." on displays with plenty of "Real Estate". --- */
+@media screen and (min-width: 600px) and (min-height: 600px) {
+    .modal {
+        width: 60%;
+        left: 20%;
+        top: 30vh;
+    }
+
+    .footer {
+        padding: 10px 0;
+        bottom: 0;
+        margin: 0;
+    }
+
+    a {
+        padding: 0px 50px;
+    }
+
+    input[type=text],
+    textarea {
+        padding: 12px 20px;
+        margin: 8px 0;
+    }
 }
