Moved Google Map Nav  Control to a separate .js.

--- a/test/gStyle.css
+++ b/test/gStyle.css
@@ -393,6 +393,7 @@ Create a clean look, that's easy to comprehend and use.
     padding: 1rem;
     font-family: inherit;
     border-radius: 10px 10px 0 0;
+    line-height: 1.4;
 }
 
 .modal .modal__actions {
