--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -18,7 +18,6 @@
     /* --main-font-color: rgb(255, 255, 255); */
     --main-font-color: rgb(0, 0, 0);
     --accent-color: rgb(61, 148, 246);
-    --menu-speed: 0.75s;
 }
 
 /* --- "Reset!" and Set Basic Parameters  --- */
@@ -291,6 +290,10 @@ a i:hover {
     font-size: 100%;
 }
 
+.modal__content a:hover {
+    color: var(--accent-color);
+}
+
 .modal #fa-code,
 .modal #fa-file-code-o {
     color: var(--accent-color);
@@ -473,6 +476,10 @@ textarea {
         width: 60%;
         left: 20%;
         top: 30vh;
+    }
+
+    .modal .modal__content {
+        line-height: 1.6;
     }
 
     .footer {
