--- a/test/gStyle.css
+++ b/test/gStyle.css
@@ -18,7 +18,6 @@
     /* --main-font-color: rgb(255, 255, 255); */
     --main-font-color: rgb(0, 0, 0);
     --accent-color: rgb(61, 148, 246);
-    --menu-speed: 0.75s;
 }
 
 /* --- "Reset!" and Set Basic Parameters  --- */
@@ -291,6 +290,10 @@ a i:hover {
     font-size: 100%;
 }
 
+.modal__content a:hover {
+    color: var(--accent-color);
+}
+
 .modal #fa-code,
 .modal #fa-file-code-o {
     color: var(--accent-color);
@@ -393,7 +396,6 @@ Create a clean look, that's easy to comprehend and use.
     padding: 1rem;
     font-family: inherit;
     border-radius: 10px 10px 0 0;
-    line-height: 1.4;
 }
 
 .modal .modal__actions {
@@ -474,6 +476,10 @@ textarea {
         width: 60%;
         left: 20%;
         top: 30vh;
+    }
+
+    .modal .modal__content {
+        line-height: 1.6;
     }
 
     .footer {
