--- a/test/gStyle.css
+++ b/test/gStyle.css
@@ -351,7 +351,7 @@ i[tool-tip]:hover::after {
     pointer-events: all;
 }
 
-/* === MODAL === */
+/* === JS MODAL === */
 /*  */
 
 /* === WHY?
@@ -418,6 +418,106 @@ hr {
     border: 0 none;
     margin-top: 5px;
     margin-bottom: 5px;
+}
+
+/* === WHY?
+Displays details without leaving the page, providing a clear and clean navigation option.
+=== */
+
+/* === Course Details Upon Click === */
+/* --- From https://www.w3schools.com/cssref/tryit.asp?filename=trycss3_target_modal --- */
+/* Add animation (Chrome, Safari, Opera) */
+@-webkit-keyframes example {
+    from {
+        top: -100px;
+        opacity: 0;
+    }
+
+    to {
+        top: 0px;
+        opacity: 1;
+    }
+}
+
+/* Add animation (Standard syntax) */
+@keyframes example {
+    from {
+        top: -100px;
+        opacity: 0;
+    }
+
+    to {
+        top: 0px;
+        opacity: 1;
+    }
+}
+
+/* The modal's background */
+.cssmodal {
+    display: none;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+}
+
+/* Display the modal when targeted */
+.cssmodal:target {
+    display: table;
+    position: absolute;
+}
+
+/* The modal box */
+.cssmodal-dialog {
+    display: table-cell;
+    vertical-align: middle;
+}
+
+/* The modal's content */
+.cssmodal-dialog .modal-content {
+    margin: auto;
+    background-color: rgba(8, 126, 161, 0.95);
+    /* Making the white text easier to read againnst the white menu text behind the modal. */
+    color: #ffffff;
+    position: relative;
+    padding: 0;
+    outline: 0;
+    text-align: justify;
+    width: 80%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    z-index: 4;
+    /* Place on top of fixed footer and hamburger-menu. Means it's scrollable and visible over all other layers. */
+
+    /* Add animation */
+    -webkit-animation-name: example;
+    /* Chrome, Safari, Opera */
+    -webkit-animation-duration: 0.5s;
+    /* Chrome, Safari, Opera */
+    animation-name: example;
+    animation-duration: 0.5s;
+}
+
+/* The button used to close the modal */
+.closebtn {
+    text-decoration: none;
+    float: right;
+    font-size: 35px;
+    font-weight: bold;
+    color: #fff;
+}
+
+.closebtn:hover,
+.closebtn:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.cssmodal-container {
+    padding: 10px 16px;
+    text-align: left;
 }
 
 
