Test: Updated all CSS Footer Modals with content and styling.

--- a/test/CSS/gStyle.css
+++ b/test/CSS/gStyle.css
@@ -434,6 +434,8 @@ hr {
     margin-bottom: 5px;
 }
 
+
+/* === CSS Modal ===  */
 /* === WHY?
 Displays details without leaving the page, providing a clear and clean navigation option.
 === */
