--- a/test/CSS/gStyle.css
+++ b/test/CSS/gStyle.css
@@ -40,6 +40,7 @@ body {
     height: 100%;
     margin: 0;
     padding: 0;
+    font-family: 'Raleway', sans-serif;
 }
 
 
@@ -586,6 +587,11 @@ textarea {
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
+}
+
+#sendmail-status {
+    font-size: 16px;
+    padding-right: 12px;
 }
 
 /* === Responsive Web Design - Mobile Devices First and Foremost === */
