Test: styling of CSS Footer Modals. Links on hover expand to 120%. Updated gStyle.css and gTest.html.

--- a/test/CSS/gStyle.css
+++ b/test/CSS/gStyle.css
@@ -302,15 +302,19 @@ a i:hover {
     font-size: 100%;
 }
 
-.modal__content a:hover,
+/* .modal__content a:hover,
 .cssmodal-content a:hover {
-    font-weight: bold;
+    font-size: 120%;
 }
 
 .modal #fa-code,
 .modal #fa-file-code-o,
 .cssmodal #fa-code {
-    font-weight: bold;
+    font-size: 120%;
+} */
+
+.modal-link-text:hover {
+    font-size: 120%;
 }
 
 /* === WHY?
