--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -11,13 +11,10 @@
 :root {
     --primary-color: rgba(13, 110, 139, 0.75);
     --overlay-color: rgba(13, 110, 139, 0.75);
-    /* --background-color: rgb(61, 148, 246); */
     --background-color: rgb(255, 255, 255);
-    /* rgb(13, 110, 139) rgb(76, 96, 155) rgb(170, 218, 255) rgb(61, 148, 246) */
-    /* Same color used throughout, except for modal background. */
-    /* --main-font-color: rgb(255, 255, 255); */
     --main-font-color: rgb(0, 0, 0);
-    --accent-color: rgb(61, 148, 246);
+    --accent-color: rgb(255, 0, 0);
+    --linear-gradient: linear-gradient(0.25turn, rgba(63, 135, 166, 0.9), rgba(235, 248, 225, 0.9), rgba(246, 157, 60, 0.9));
 }
 
 /* --- "Reset!" and Set Basic Parameters  --- */
@@ -39,6 +36,8 @@ body {
     height: 100%;
     margin: 0;
     padding: 0;
+    font-family: 'Raleway', sans-serif;
+    background: var(--linear-gradient);
 }
 
 
@@ -56,9 +55,8 @@ JS: Create and call custom functions, ZoomControl, MapType Control, and FullScre
 
 .gm-style .controls {
     font-size: 36px;
-    /* this adjusts the size of all the controls */
     background-color: var(--background-color);
-    /* Border around the navigation controls */
+    background: var(--linear-gradient);
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     box-sizing: border-box;
     border-radius: 2px;
@@ -75,19 +73,16 @@ JS: Create and call custom functions, ZoomControl, MapType Control, and FullScre
 .gm-style .controls button {
     border: 0;
     background-color: var(--background-color);
-    /* Background of the navigation controls */
     color: var(--main-font-color);
-    /* Navigation control colour */
     font-family: 'Raleway', sans-serif;
-    /* Consistent Font use on the website - Google: Map and Satellite naviagation elements */
 }
 
 .gm-style .controls button:hover {
     color: var(--main-font-color);
+    background: var(--linear-gradient);
     transform: scale(1.5);
 }
 
-/* Added 'outline: none' to remove ugly click outline.  */
 .gm-style .controls button:focus {
     outline: none;
 }
@@ -100,7 +95,6 @@ JS: Create and call custom functions, ZoomControl, MapType Control, and FullScre
 
 .gm-style .controls.zoom-control button {
     font: 0.85em Raleway;
-    /* Consistent Font use on the website - Google: Zoom + - naviagation elements */
     margin: 1px;
     padding: 0;
 }
@@ -180,7 +174,14 @@ JS: Create and call custom functions, ZoomControl, MapType Control, and FullScre
     border-width: 2px 0 0 2px;
 }
 
+/* Together with JS Styling this creates a linear background effect. */
+.gm-style,
+.gm-style-iw,
+.gm-style-iw-c {
+    background: var(--linear-gradient)
+}
 
+/* Consistent Font use on the website - Google Map, Tool-Tips, Controls and Text */
 .weather,
 .btn,
 .gm-style,
@@ -188,7 +189,6 @@ JS: Create and call custom functions, ZoomControl, MapType Control, and FullScre
 p {
     font-family: 'Raleway', sans-serif;
     margin-bottom: 10px;
-    /* Consistent Font use on the website - Google Map, Tool-Tips, Controls and Text */
 }
 
 
@@ -232,7 +232,6 @@ JS: Control Marker Tool-Tips, and Modals.
         "map map map"
         "map map map"
         "footer  footer footer";
-    /* Crazy, I know...though it makes perfect sense...and is visually appealing, and is easier to understand */
 }
 
 .map {
@@ -251,6 +250,7 @@ JS: Control Marker Tool-Tips, and Modals.
     margin: 0;
     text-align: center;
     background: var(--background-color);
+    background: var(--linear-gradient);
     color: var(--main-font-color);
     -webkit-box-shadow: 0px -6px 20px 0px rgba(0, 0, 0, 0.19);
     -moz-box-shadow: 0px -6px 20px 0px rgba(0, 0, 0, 0.19);
@@ -274,62 +274,19 @@ a {
     font-size: 110%;
     padding: 0px 10px;
     text-decoration: none;
-    /* Remove underline from links = HTML style="text-decoration:none" */
 }
 
 a i:hover {
-    /* color: #30e0fc; */
-    /* zoom: 120%; */
     transform: scale(1.5);
-    /* transform: scale() works on all browsers. zoom: doesn't work on Firefox. Also, zoom: ruins the footer. */
 }
 
 .modal a {
     color: rgb(0, 0, 0);
-    /* Make sure the links are visible against the white modal background */
     font-size: 100%;
 }
 
-.modal__content a:hover {
-    color: var(--accent-color);
-}
-
-.modal #fa-code,
-.modal #fa-file-code-o {
-    color: var(--accent-color);
-}
-
-/* === WHY?
-Adding tool-tips to clarify the fixed-footer elements (and to show off a nifty and useful CSS 3 feature).
-=== */
-
-/* --- Tool-tip on Hover by Kevin Powell: https://www.youtube.com/watch?v=xoRbkm8XgfQ HTML <i ... tool-tip="Tool-tip Text" ... ></i> --- */
-i[tool-tip] {
-    position: relative;
-}
-
-i[tool-tip]::after {
-    content: attr(tool-tip);
-    display: block;
-    position: absolute;
-    /* background-color: rgb(13, 110, 139); */
-    background-color: var(--background-color);
-    padding: 1em 2em;
-    color: var(--main-font-color);
-    font-size: 0.75em;
-    bottom: 0;
-    left: -45px;
-    /* Works on all tested displays (Chrome --> Inspect and FireFox RDM) and devices. The Tool-Tips are fully visible. */
-    white-space: normal;
-    transform: scale(0);
-    transition: transform ease-out 250ms, bottom ease-out 250ms;
-    font-family: 'Raleway', sans-serif;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-
-i[tool-tip]:hover::after {
-    transform: scale(1);
-    bottom: 200%;
+.modal-link-text:hover {
+    font-size: 130%;
 }
 
 /* === BACKDROP === */
@@ -351,7 +308,7 @@ i[tool-tip]:hover::after {
     pointer-events: all;
 }
 
-/* === MODAL === */
+/* === JS MODAL === */
 /*  */
 
 /* === WHY?
@@ -361,10 +318,8 @@ Create a clean look, that's easy to comprehend and use.
 === */
 
 .card {
-    /* background: var(--main-font-color); */
     background: var(--background-color);
     border-radius: 10px;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
@@ -372,10 +327,13 @@ Create a clean look, that's easy to comprehend and use.
     position: fixed;
     z-index: 100;
     width: 80%;
-    top: 10vh;
+    top: 5vh;
     left: 10%;
     display: none;
     font-family: Raleway, sans-serif;
+    background: var(--linear-gradient);
+    overflow-y: auto;
+    max-height: 90vh;
 }
 
 .modal.visible {
@@ -386,8 +344,8 @@ Create a clean look, that's easy to comprehend and use.
 .modal .modal__title {
     margin: 0;
     padding: 1rem;
-    border-bottom: 1px solid #00329e;
-    background: #00329e;
+    border-bottom: 1px solid rgb(0, 50, 158);
+    background: rgb(0, 50, 158);
     color: var(--main-font-color);
     border-radius: 10px 10px 0 0;
 }
@@ -420,13 +378,100 @@ hr {
     margin-bottom: 5px;
 }
 
+.flag,
+svg {
+    margin-top: 5px;
+}
+
+
+/* === CSS Modal ===  */
+/* === WHY?
+Displays details without leaving the page, providing a clear and clean navigation option.
+=== */
+
+/* === Course Details Upon Click === */
+/* --- From https://www.w3schools.com/cssref/tryit.asp?filename=trycss3_target_modal --- */
+/* Add animation (Chrome, Safari, Opera) */
+@-webkit-keyframes example {
+    from {
+        top: -100px;
+        opacity: 0;
+    }
+
+    to {
+        top: 0px;
+        opacity: 1;
+    }
+}
+
+/* Add animation (Standard syntax) */
+@keyframes example {
+    from {
+        top: -100px;
+        opacity: 0;
+    }
+
+    to {
+        top: 0px;
+        opacity: 1;
+    }
+}
+
+/* The modal's background */
+.cssmodal {
+    display: none;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background: rgba(0, 0, 0, 0.20);
+}
+
+/* Display the modal when targeted */
+.cssmodal:target {
+    display: table;
+    position: absolute;
+}
+
+/* The modal box */
+.cssmodal-dialog {
+    display: table-cell;
+    vertical-align: middle;
+}
+
+/* The modal's content */
+.cssmodal-dialog .cssmodal-content {
+    margin: auto;
+    background: var(--linear-gradient);
+    color: var(--main-font-color);
+    border-radius: 10px 10px 10px 10px;
+    position: relative;
+    padding: 0;
+    outline: 0;
+    text-align: justify;
+    width: 80%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    z-index: 4;
+    -webkit-animation-name: example;
+    -webkit-animation-duration: 0.5s;
+    animation-name: example;
+    animation-duration: 0.5s;
+}
+
+.cssmodal-container {
+    padding: 10px 16px;
+    text-align: left;
+}
+
 
 /* === BUTTONS ===
 Using CSS Button Creator: https://cssbuttoncreator.com/ and some additional modification to get it "just right".
 Added 'outline: none' to remove ugly click outline.
 */
 .button {
-    background: #3D94F6;
+    background: rgba(63, 135, 166, 1);
     -webkit-border-radius: 20px;
     -moz-border-radius: 20px;
     border-radius: 20px;
@@ -444,7 +489,7 @@ Added 'outline: none' to remove ugly click outline.
 }
 
 .button:hover {
-    background: #1E62D0;
+    background: rgba(246, 157, 60, 1);
     -webkit-border-radius: 20px;
     -moz-border-radius: 20px;
     border-radius: 20px;
@@ -460,26 +505,38 @@ input[type=text],
 textarea {
     width: 100%;
     padding: 4px 20px;
-    /* padding: 12px 20px; */
     margin: 4px 0;
-    /* margin: 8px 0; */
     display: inline-block;
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
 }
 
+#sendmail-status {
+    font-size: 16px;
+    padding-right: 12px;
+}
+
+
+
 /* === Responsive Web Design - Mobile Devices First and Foremost === */
-/* --- Make sure that the JS Modal doesn't "hog the limelight, too much..." on displays with plenty of "Real Estate". --- */
+/* --- Make sure that the JS Modal doesn't "hog the limelight, too much..." on displays with plenty of "Real Estate".
+Using a Modal CSS trick for the JS Modal to center the modal; .modal {} --- */
 @media screen and (min-width: 600px) and (min-height: 600px) {
     .modal {
-        width: 60%;
-        left: 20%;
-        top: 30vh;
+        position: fixed;
+        width: fit-content;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
     }
 
     .modal .modal__content {
         line-height: 1.6;
+    }
+
+    .cssmodal-dialog .cssmodal-content {
+        width: 70%;
     }
 
     .footer {
