Production: ran style.css through a CSS Validator. Fixed the errors found, all related to using variables. Seems strange. Documentation: updated README.md with more testing information.

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -7,16 +7,6 @@
 '.container' and 'showcase' creating a consistent look-and-feel.
 === */
 
-/* --- Style Variables: Colours and Hamburger Menu-speed.--- */
-:root {
-    --primary-color: rgba(13, 110, 139, 0.75);
-    --overlay-color: rgba(13, 110, 139, 0.75);
-    --background-color: rgb(255, 255, 255);
-    --main-font-color: rgb(0, 0, 0);
-    --accent-color: rgb(255, 0, 0);
-    --linear-gradient: linear-gradient(0.25turn, rgba(63, 135, 166, 0.9), rgba(235, 248, 225, 0.9), rgba(246, 157, 60, 0.9));
-}
-
 /* --- "Reset!" and Set Basic Parameters  --- */
 * {
     margin: 0;
@@ -37,7 +27,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Raleway', sans-serif;
-    background: var(--linear-gradient);
+    background: linear-gradient(0.25turn, rgba(63, 135, 166, 0.9), rgba(235, 248, 225, 0.9), rgba(246, 157, 60, 0.9));
 }
 
 
@@ -55,8 +45,8 @@ JS: Create and call custom functions, ZoomControl, MapType Control, and FullScre
 
 .gm-style .controls {
     font-size: 36px;
-    background-color: var(--background-color);
-    background: var(--linear-gradient);
+    background-color: rgb(255, 255, 255);
+    background: linear-gradient(0.25turn, rgba(63, 135, 166, 0.9), rgba(235, 248, 225, 0.9), rgba(246, 157, 60, 0.9));
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     box-sizing: border-box;
     border-radius: 2px;
@@ -72,14 +62,14 @@ JS: Create and call custom functions, ZoomControl, MapType Control, and FullScre
 
 .gm-style .controls button {
     border: 0;
-    background-color: var(--background-color);
-    color: var(--main-font-color);
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
     font-family: 'Raleway', sans-serif;
 }
 
 .gm-style .controls button:hover {
-    color: var(--main-font-color);
-    background: var(--linear-gradient);
+    color: rgb(0, 0, 0);
+    background: linear-gradient(0.25turn, rgba(63, 135, 166, 0.9), rgba(235, 248, 225, 0.9), rgba(246, 157, 60, 0.9));
     transform: scale(1.5);
 }
 
@@ -178,7 +168,7 @@ JS: Create and call custom functions, ZoomControl, MapType Control, and FullScre
 .gm-style,
 .gm-style-iw,
 .gm-style-iw-c {
-    background: var(--linear-gradient)
+    background: linear-gradient(0.25turn, rgba(63, 135, 166, 0.9), rgba(235, 248, 225, 0.9), rgba(246, 157, 60, 0.9))
 }
 
 /* Consistent Font use on the website - Google Map, Tool-Tips, Controls and Text */
@@ -249,9 +239,8 @@ JS: Control Marker Tool-Tips, and Modals.
     bottom: 0;
     margin: 0;
     text-align: center;
-    background: var(--background-color);
-    background: var(--linear-gradient);
-    color: var(--main-font-color);
+    background: linear-gradient(0.25turn, rgba(63, 135, 166, 0.9), rgba(235, 248, 225, 0.9), rgba(246, 157, 60, 0.9));
+    color: rgb(0, 0, 0);
     -webkit-box-shadow: 0px -6px 20px 0px rgba(0, 0, 0, 0.19);
     -moz-box-shadow: 0px -6px 20px 0px rgba(0, 0, 0, 0.19);
     box-shadow: 0px -6px 20px 0px rgba(0, 0, 0, 0.19);
@@ -270,7 +259,7 @@ Create a clean look, that's easy to comprehend and use.
 
 /* ---  Making the Navigation Links visible against the #999999 (grey) background of the Fixed Navigation --- */
 a {
-    color: var(--main-font-color);
+    color: rgb(0, 0, 0);
     font-size: 110%;
     padding: 0px 10px;
     text-decoration: none;
@@ -318,7 +307,7 @@ Create a clean look, that's easy to comprehend and use.
 === */
 
 .card {
-    background: var(--background-color);
+    background: rgb(255, 255, 255);
     border-radius: 10px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
@@ -331,7 +320,7 @@ Create a clean look, that's easy to comprehend and use.
     left: 10%;
     display: none;
     font-family: Raleway, sans-serif;
-    background: var(--linear-gradient);
+    background: linear-gradient(0.25turn, rgba(63, 135, 166, 0.9), rgba(235, 248, 225, 0.9), rgba(246, 157, 60, 0.9));
     overflow-y: auto;
     max-height: 90vh;
 }
@@ -346,7 +335,7 @@ Create a clean look, that's easy to comprehend and use.
     padding: 1rem;
     border-bottom: 1px solid rgb(0, 50, 158);
     background: rgb(0, 50, 158);
-    color: var(--main-font-color);
+    color: rgb(0, 0, 0);
     border-radius: 10px 10px 0 0;
 }
 
@@ -444,8 +433,8 @@ Displays details without leaving the page, providing a clear and clean navigatio
 /* The modal's content */
 .cssmodal-dialog .cssmodal-content {
     margin: auto;
-    background: var(--linear-gradient);
-    color: var(--main-font-color);
+    background: linear-gradient(0.25turn, rgba(63, 135, 166, 0.9), rgba(235, 248, 225, 0.9), rgba(246, 157, 60, 0.9));
+    color: rgb(0, 0, 0);
     border-radius: 10px 10px 10px 10px;
     position: relative;
     padding: 0;
