Test/Production: to make the Google Map Navigational Buttons work properly on real mobile devices, added '.gm-style .controls button:active {     color: var(--main-font-color);     background: var(--linear-gradient); }', from 'button:hover ' to 'button:active' before the previous removal. Now to test on a real device in Production.

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -59,6 +59,11 @@ JS: Create and call custom functions, ZoomControl, MapType Control, and FullScre
     font-family: 'Raleway', sans-serif;
 }
 
+.gm-style .controls button:active {
+    color: var(--main-font-color);
+    background: var(--linear-gradient);
+}
+
 .gm-style .controls button:focus {
     outline: none;
 }
