Test/Production: redeployed the InforWindow styling as it creates a common and easily recognisable look-and-feel. I'm still "fighting" Google's JS for the InfoWindow. Put back these lines of JS code 'document.querySelector(".gm-style-iw-d").className = "";                         document.querySelector(".gm-style-iw-c").style = "padding: 12px";' in maps.js (gStyle.js), and '.gm-style-iw, .gm-style-iw-c {     background: var(--linear-gradient) }' in style.css (gStyle.css) for the linear-gradient effect used throughout the website.

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -155,6 +155,11 @@ JS: Create and call custom functions, ZoomControl, MapType Control, and FullScre
     border-width: 2px 0 0 2px;
 }
 
+.gm-style-iw,
+.gm-style-iw-c {
+    background: var(--linear-gradient)
+}
+
 /* Consistent Font use on the website - Google Map, Tool-Tips, Controls and Text */
 .weather,
 .btn,
